# vbulletin-bot

./: .gitlab-ci.yml  Cargo.toml  readme.md
.github/workflows/: clippy.yml  rust.yml
src/: lib.rs  main.rs
