[package]
name = "vbulletin-bot"
version = "0.1.0"
authors = ["Dirk Stolle <striezel-dev@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
serde_json = "1.0"
